[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde-enum-str = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
blackjack_macros = { path = "../blackjack_macros" }
