[package]
name = "blackjack_drivers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/shared.rs"

[[bin]]
name = "blackjack_simulator"
path = "src/blackjack_simulator/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackjack = { path = "../blackjack" }
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
home = "0.5.4"
